<resources>
    <string name="app_name">Weather</string>
    <string name="empty_city_name">Empty city name</string>
    <string name="space">&#160;</string>
    <string name="windSpeed">&#160;km/h</string>
    <string name="degree">&#176;</string>
    <string name="percent">&#160;&#37;</string>
    <string name="pressure_symbol">&#160;hPa</string>
    <string name="hours">Hourly</string>
    <string name="weekly">Weekly</string>
    <string name="apparent">Noticeably</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="add_location">Add location</string>
    <string name="vertical_line">&#160;|&#160;</string>
    <string name="add_city">Add City</string>
    <string name="double_back">Please click BACK again to exit</string>
    <string name="no_internet_connection">Internet connection is unavailable</string>
    <string name="no_server_connection">Server connection is unavailable</string>
    <string name="city_name">City name</string>
    <string name="rain">Rain</string>
    <string name="mist">Mist</string>
    <string name="partly_cloudy_day">Partly cloudy day</string>
    <string name="partly_cloudy_night">Partly cloudy night</string>
    <string name="snow">Snow</string>
    <string name="sleet">Sleet</string>
    <string name="clear">Clear</string>
    <string name="cloudy">Cloudy</string>
    <string name="wind">Wind</string>
    <string name="details">Details</string>
    <string name="your_cities">Your Cities</string>
    <string name="language">en</string>
    <string name="less_than_min">Next refresh in less than minute</string>
    <string name="more_than_min">Next refresh in %1$d min</string>
    <string name="precip">Precip</string>
    <string name="precip_unit">mm/h</string>
    <string name="intensity">Intensity</string>
    <string name="city_not_found">City not found</string>
    <string name="city_already_added">City added</string>
    <string name="city_exists_in_db">City already exists in Database</string>
    <string name="to_many_clicks">To many clicks</string>
    <string name="locating_in_progress">Locating in progress</string>
    <string name="localization_disabled">Localization is disabled in System</string>
    <string name="data_time">Last actualisation:&#160;</string>
</resources>
